--- a/index.html
+++ b/index.html
@@ -4,30 +4,45 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="https://bootswatch.com/5/united/bootstrap.min.css">
+    <title>My Library App</title>
 </head>
 <body>
-    <div class="container-fluid ">
-        <button class="btn btn-primary mt-5 mb-5" id="book-btn" onclick="newBookBtn()">NEW BOOK</button>
-        <div class="form mb-5" id="form">
-            <input type="text" placeholder="Book title">
-            <button class="btn btn-secondary" id="add-btn">Add book</button>
-        </div>
-        <div class="card mb-5" style="width: 18rem;">
-            <div class="card-body ">
-                <h5 class="card-title" id="new-book"></h5>
-                <p class="card-text" id="book-details"></p>
-                <a href="#" class="btn btn-primary">Delete Book</a>
+    <div class="container mt-4">
+        <h1 class="display-4"><i class="fas fa-book-open text-info"></i> My <span class="text-info">Library</span> App</h1>
+        <form id="book-form">
+            <div class="form-group mt-3">
+                <label for="title">Title</label>
+                <input type="text" id="title" class="form-control">
             </div>
-        </div>
+            <div class="form-group mt-3">
+                <label for="author">Author</label>
+                <input type="text" id="author" class="form-control">
+            </div>
+            <div class="form-group mt-3">
+                <label for="pages">Pages</label>
+                <input type="text" id="pages" class="form-control">
+            </div>
+            <div class="form-check mt-3">
+                <input class="form-check-input" type="checkbox" value="Read" id="read">
+                <label class="form-check-label" for="read">
+                    Read
+                </label>
+            </div>
+            <input type="submit" value="Add Book" class="btn btn-info btn-block mt-3">
+        </form>
+        <table class="table mt-5">
+            <thead>
+                <tr>
+                    <th scope="col">Title</th>
+                    <th scope="col">Author</th>
+                    <th scope="col">Pages</th>
+                    <th scope="col">Read</th>
+                    <th scope="col"></th>
+                </tr>
+            </thead>
+        </table>
     </div>
     <script src="index.js"></script>
 </body>
