--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <input type="text" id="pages" class="form-control">
             </div>
             <div class="form-check mt-3">
-                <input class="form-check-input" type="checkbox" name="checkbox" value="Read" id="read">
+                <input class="form-check-input" type="checkbox" name="checkbox" value="Yes" id="read">
                 <label class="form-check-label" for="read">
                     Read
                 </label>
