--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <tr>
                     <th scope="col">Title</th>
                     <th scope="col">Author</th>
-                    <th scope="col">Read?</th>
+                    <th scope="col">Status</th>
                     <th scope="col">Pages</th>
                     <th scope="col">Remove</th>
                 </tr>
