--- a/index.html
+++ b/index.html
@@ -5,12 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://bootswatch.com/5/united/bootstrap.min.css">
+    <link rel="stylesheet" href="https://bootswatch.com/5/vapor/bootstrap.min.css">
+    <link rel="stylesheet" href="style.css">
     <title>My Library App</title>
 </head>
 <body>
-    <div class="container mt-4">
-        <h1 class="display-4"><i class="fas fa-book-open text-info"></i> My <span class="text-info">Library</span> App</h1>
+    <div class="container">
+        <div class="open-library">
+            <h1>
+                <i class="fas fa-book-open text-light"></i>
+            </h1>
+            <button class="btn btn-light">Open Library</button>
+        </div>
+    
+        <div class="library-container hidden">
+        <h1 class="display-4">My <span class="text-primary">Library</span> App</h1>
         <form id="book-form">
             <div class="form-group mt-3">
                 <label for="title">Title</label>
@@ -22,7 +31,7 @@
             </div>
             <div class="form-group mt-3">
                 <label for="pages">Pages</label>
-                <input type="text" id="pages" class="form-control">
+                <input type="number" min="1" max="1000" id="pages" class="form-control">
             </div>
             <div class="form-check mt-3">
                 <input class="form-check-input" type="checkbox" name="checkbox" value="Yes" id="read">
@@ -30,21 +39,21 @@
                     Read
                 </label>
             </div>
-            <input type="submit" value="Add Book" class="btn btn-info btn-block mt-3">
+            <input type="submit" value="Add Book" class="btn btn-primary btn-block mt-3">
         </form>
         <table class="table mt-5">
             <thead>
                 <tr>
                     <th scope="col">Title</th>
                     <th scope="col">Author</th>
-                    <th scope="col">Status</th>
                     <th scope="col">Pages</th>
+                    <th scope="col">Status</th>
                     <th scope="col">Remove</th>
                 </tr>
             </thead>
             <tbody id="book-list"></tbody>
-            
         </table>
+        </div>
     </div>
     <script src="index.js"></script>
 </body>
