--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <button class="btn btn-info" id="open-btn">Open Library</button>
         </div>
     
-        <div class="library-container hidden">
+        <div class="library-container d-none">
         <h1 class="display-4">My <span class="text-info">Library</span> App</h1>
         <form id="book-form">
             <div class="form-group mt-3">
